:rocket: pulling new updates code running dbt example

--- a/analysis/sqlparsing.ipynb
+++ b/analysis/sqlparsing.ipynb
@@ -72,8 +72,8 @@
     {
      "data": {
       "text/plain": [
-       "[{'data': {'id': 'sapi_9119.workspace_863912091.breweries'}},\n",
-       " {'data': {'id': 'sapi_9119.workspace_863912091.beers'}}]"
+       "[{'data': {'id': 'sapi_9119.WORKSPACE_1183594922.breweries'}},\n",
+       " {'data': {'id': 'sapi_9119.WORKSPACE_1183594922.beers'}}]"
       ]
      },
      "execution_count": 50,
@@ -93,7 +93,7 @@
     {
      "data": {
       "text/plain": [
-       "Schema: sapi_9119.workspace_863912091"
+       "Schema: sapi_9119.WORKSPACE_1183594922"
       ]
      },
      "execution_count": 51,
@@ -114,8 +114,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sapi_9119.workspace_863912091.beers\n",
-      "sapi_9119.workspace_863912091.breweries\n"
+      "sapi_9119.WORKSPACE_1183594922.beers\n",
+      "sapi_9119.WORKSPACE_1183594922.breweries\n"
      ]
     }
    ],
@@ -141,7 +141,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " * SQLLineage Running on http://localhost:5000/?e=%0A%0ASELECT+%2A%0AFROM+%22SAPI_9119%22.%22WORKSPACE_863912091%22.%22beers%22+beers%0AJOIN+%22SAPI_9119%22.%22WORKSPACE_863912091%22.%22breweries%22+breweries+USING+%28brewery_id%29\n"
+      " * SQLLineage Running on http://localhost:5000/?e=%0A%0ASELECT+%2A%0AFROM+%22SAPI_9119%22.%22WORKSPACE_1183594922%22.%22beers%22+beers%0AJOIN+%22SAPI_9119%22.%22WORKSPACE_1183594922%22.%22breweries%22+breweries+USING+%28brewery_id%29\n"
      ]
     }
    ],
